examples/invalid/33_effect_alias_bad_effect_argument.lane
module Examples.Invalid.EffectAliasBadEffectArgument

effect Coroutine {
  pause() -> Unit
}

type Task[E : Effect] = { Coroutine, E }

fn bad() -> Unit ! Task[Int] {
  ()
}
